  - To use the ``parallel`` statement you now have to
    use the ``--experimental`` mode.
  - Toplevel procs of calling convention ``closure`` never worked reliably
    and are now deprecated and will be removed from the language. Instead you
    have to insert type conversions
    like ``(proc (a, b: int) {.closure.})(myToplevelProc)`` if necessary.
  - The constant fights between 32 and 64 bit DLLs on Windows have been put to
    an end: The standard distribution now ships with 32 and 64 bit versions
    of all the DLLs the standard library needs. This means that the following
    DLLs are now split into 32 and 64 versions:

    * ``prce.dll``: Split into ``prce32.dll`` and ``prce64.dll``.
    * ``pdcurses.dll``: Split into ``pdcurses32.dll`` and ``pdcurses64.dll``.
    * ``sqlite3.dll``: Split into ``sqlite3_32.dll`` and ``sqlite3_64.dll``.
    * ``ssleay32.dll``: Split into ``ssleay32.dll`` and ``ssleay64.dll``.
    * ``libeay32.dll``: Split into ``libeay32.dll`` and ``libeay64.dll``.

    Compile with ``-d:nimOldDLLs`` to make the stdlib use the old DLL names.
  - Nim VM now treats objects as nkObjConstr nodes, and not nkPar nodes as it
    was previously. Macros that generate nkPar nodes when object is expected are
    likely to break. Macros that expect nkPar nodes to which objects are passed
    are likely to break as well.


  Library additions
  -----------------

  - The nre module has been added, providing a better interface to PCRE than re.
  - The ``expandSymlink`` proc has been added to the ``os`` module.
  - The ``tailDir`` proc has been added to the ``os`` module.
  - Define ``nimPinToCpu`` to make the ``threadpool`` use explicit thread
    affinities. This can speed up or slow down the thread pool; it's up to you
    to benchmark it.
  - ``strutils.formatFloat`` and ``formatBiggestFloat`` do not depend on the C
    locale anymore and now take an optional ``decimalSep = '.'`` parameter.


  Language Additions
  ------------------
