@@ -14,7 +14,7 @@ type
   TParticle = object of TThing
     a, b: int
 
-method collide(a, b: TThing) {.inline.} =
+method collide(a, b: TThing) {.base, inline.} =
   echo "collide: thing, thing"
 
 method collide(a: TThing, b: TUnit) {.inline.} =
