@@ -10,7 +10,7 @@ type
   TParticle = object of TThing
     a, b: int
 
-method collide(a, b: TThing) {.inline.} =
+method collide(a, b: TThing) {.base, inline.} =
   quit "to override!"
 
 method collide[T](a: TThing, b: TUnit[T]) {.inline.} =
